force-app/main/default/objects/Box_Configuration__mdt/Box_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Box Configuration</label>
    <pluralLabel>Box Configurations</pluralLabel>
</CustomObject>