force-app/main/default/objects/Box_Configuration__mdt/fields/Passphrase__c.field-meta.xml
<CustomField>
    <fullName>Passphrase__c</fullName>
    <label>Passphrase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>