force-app/main/default/objects/Box_Configuration__mdt/fields/Public_Key_ID__c.field-meta.xml
<CustomField>
    <fullName>Public_Key_ID__c</fullName>
    <label>Public Key ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>